--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit>=1.20
 pandas
 numpy
 matplotlib
-psycopg2-binary   # for Postgres access from Python (or use 'asyncpg' if needed)
-sqlalchemy        # optional if you use SQLAlchemy in migration scripts
-reportlab         # if you want PDF generation on server (optional)
-
+psycopg2-binary
+sqlalchemy
+reportlab
+git+ssh://git@github.com/Hamid-coder1988/engisnap-engine.git@main
